--- a/chat-app/src/pages/Login/login.css
+++ b/chat-app/src/pages/Login/login.css
@@ -5,16 +5,92 @@
 
 .left-login {
     flex: 1;
-    background: rgb(211, 211, 211);
+    display: flex;
+    background: rgb(255, 255, 255);
     flex-direction: column;
-    gap: 70px;
+    gap: 5px;
+    margin-left: 132px;
+    border-left: 0px;
 }
 
 .login-slogan {
+    margin-top: 60px;
+    padding: 0;
     display: flex;
     flex-direction: column;
     font-weight: 700;
-    font-size: 90px;
-    /* color: linear-gradient(83.84deg, #0088FF -6.87%, #A033FF 26.54%, #FF5C87 58.58%); */
-    color: red
+    font-size: 75px;
+    font-family: Helvetica, sans-serif;
+    background-clip: text;
+    background: linear-gradient(83.84deg, #0088FF -6.87%, #A033FF 26.54%, #FF5C87 58.58%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+
+}
+
+.login-description {
+    margin-top: 20px;
+    color: #8d8d8d;
+    font-weight: 400;
+    font-family: Helvetica, sans-serif;
+}
+
+.login-container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 20px;
+    gap: 15px;
+}
+
+.login-container input {
+    width: 325px;
+    background: #f4f4f4;
+    height: 40px;
+    border: 0;
+    padding-left: 20px;
+    border-radius: 12px;
+    color: #2c2c2c;
+    font-size: 16px;
+    outline: #007BFF;
+}
+
+.login-container input::placeholder {
+    color: #858585
+}
+
+.login-container input:focus {
+    outline: 2px solid #007BFF;
+    /* outline-offset: 4px; */
+}
+
+.login-container button {
+    width: 120px;
+    height: 40px;
+    border: 0;
+    background: #007BFF;
+    font-size: 18px;
+    color: white;
+    border-radius: 50px;
+    margin-top: 5px;
+    font-weight: 600;
+}
+
+.login-platform {
+    display: flex;
+    flex-direction: row;
+
+
+}
+
+.login-platform .microsoft {
+    width: 155px;
+    height: 51px;
+    margin-top: 15px;
+    border-radius: 7px;
+}
+
+.login-platform .appstore {
+    width: 200px;
+    height: fit-content;
 }
