--- a/chat-app/src/components/LoginNavBar/Login_NavBar.css
+++ b/chat-app/src/components/LoginNavBar/Login_NavBar.css
@@ -30,10 +30,16 @@
     flex-direction: column;
 }
 
+.login-nav-li a {
+    color: inherit;
+}
+
 .login-nav-li:hover {
     color: #007BFF;
     cursor: pointer;
 }
+
+
 
 .login-nav-li:active {
     color: #0062cb;
