--- a/chat-app/src/pages/Login/login.css
+++ b/chat-app/src/pages/Login/login.css
@@ -80,14 +80,14 @@
     background: #0062cb;
 }
 
-.login-container .sign-up {
+.login-container .sign-up-btn {
     color: #007BFF;
     font-weight: 600;
     cursor: pointer;
     user-select: none;
 }
 
-.login-container .sign-up:active {
+.login-container .sign-up-btn:active {
     color: #0062cb;
 
 }
