--- a/chat-app/src/components/LoginNavBar/Login_NavBar.css
+++ b/chat-app/src/components/LoginNavBar/Login_NavBar.css
@@ -28,6 +28,14 @@
 .login-nav-li {
     display: flex;
     flex-direction: column;
+    gap: 2px
+}
+
+.login-nav-li hr {
+    height: 2px;
+    background: #007BFF;
+    border: 0;
+    border-radius: 25px;
 }
 
 .login-nav-li a {
