adding Privacy page

--- a/chat-app/src/components/Features_item1/features_item1.css
+++ b/chat-app/src/components/Features_item1/features_item1.css
@@ -16,7 +16,7 @@
     font-weight: 700;
     font-size: 70px;
     background-clip: text;
-    background: linear-gradient(83.84deg, #007BFF -8.87%, #A033FF 6.54%, #FF5C87 58.58%);
+    background: linear-gradient(83.84deg, #007BFF -8.87%, #33c2ff 6.54%, #50fffc 58.58%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
