--- a/chat-app/src/components/LoginNavBar/Login_NavBar.css
+++ b/chat-app/src/components/LoginNavBar/Login_NavBar.css
@@ -4,8 +4,10 @@
     height: 100px;
     display: flex;
     flex-direction: row;
-    gap: 560px;
+    gap: 500px;
     align-items: center;
+    position: sticky;
+    top: 0;
 
 }
 
