--- a/chat-app/src/pages/Login/login.css
+++ b/chat-app/src/pages/Login/login.css
@@ -22,7 +22,7 @@
     font-size: 75px;
 
     background-clip: text;
-    background: linear-gradient(83.84deg, #007BFF -8.87%, #A033FF 6.54%, #FF5C87 58.58%);
+    background: linear-gradient(83.84deg, #007BFF -8.87%, #33c2ff 6.54%, #50fffc 58.58%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 
