--- a/chat-app/src/components/InfoSection/InfoSection.css
+++ b/chat-app/src/components/InfoSection/InfoSection.css
@@ -18,7 +18,6 @@
 }
 
 .avatar-container {
-  position: relative;
   width: 80px;
   height: 80px;
   margin: 0 auto;
@@ -65,27 +64,22 @@
   color: black;
 }
 
-.options {
-  list-style: none;
-  padding: 0;
-}
-
-.options li {
+/* Gom các tùy chọn lại với nhau */
+.options li, .sub-options li {
   display: flex;
   align-items: center;
-  justify-content: space-between;
   margin: 10px 0;
   cursor: pointer;
   padding: 10px;
-  background-color: #f0f0f0;
+  background-color: white;
   color: black;
   border-radius: 8px;
   transition: background-color 0.3s;
-  border: 1px solid #ddd;
+  border: none;
 }
 
-.options li:hover {
-  background-color: #e0e0e0;
+.options li:hover, .sub-options li:hover {
+  background-color: #d2b48c;
 }
 
 .arrow {
@@ -96,20 +90,6 @@
 
 .sub-options {
   list-style: none;
-  padding-left: 0; /* Xóa khoảng cách thụt vào bên trái */
-}
-
-.sub-options li {
-  display: flex;
-  align-items: center;
-  margin: 5px 0;
-  cursor: pointer;
-  padding: 8px;
-  background-color: #f8f8f8;
-  color: black;
-  border-radius: 8px;
-  transition: background-color 0.3s;
-  justify-content: flex-start; /* Đẩy icon và chữ về bên trái */
 }
 
 .sub-options li img {
@@ -118,14 +98,10 @@
   height: 24px;
 }
 
-.sub-options li:hover {
-  background-color: #eaeaea;
-}
-
+/* Danh sách thành viên */
 .members {
   list-style: none;
   padding: 0;
-  margin-top: 10px;
 }
 
 .member-item {
@@ -136,25 +112,27 @@
   background-color: #3e3b3b;
   border-radius: 8px;
   transition: background-color 0.3s;
-  gap: 0px;
-  flex-direction: row;
 }
 
-.member-item .admin {
-  width: 195.52px;
-}
-
-.member-item .add {
-  width: 215px;
+.member-item:hover {
+  background-color: #505050;
 }
 
 .member-avatar {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  margin-right: 5px; /* Giảm khoảng cách giữa icon và chữ */
+  margin-right: 5px;
 }
 
-.member-item p {
+.member-info {
+  flex-grow: 1;
+}
+
+.member-info p {
   margin: 0;
+}
+
+.admin, .add {
+  flex-grow: 1;
 }
