--- a/chat-app/src/components/InfoPersonal/infopersonal.css
+++ b/chat-app/src/components/InfoPersonal/infopersonal.css
@@ -10,11 +10,12 @@
     top: 0;
     border-radius: 15px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    gap: 80px;
   }
 
 .sidebar__profile {
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
   }
   
 .profile__image {
@@ -33,7 +34,7 @@
 .profile__actions {
     display: flex;
     justify-content: space-around;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
   }
 
 .profile__action-button {
@@ -56,12 +57,16 @@
   .menu__section {
     list-style: none;
     padding: 0;
+    justify-content: space-between;
   }
   
   .menu__section-title {
     font-size: 18px;
     color: #000; 
-    margin-bottom: 10px;
+    margin-bottom: 15px;
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
   }
   
   /* Các mục trong menu */
@@ -69,14 +74,17 @@
     display: flex;
     align-items: center;
     margin: 5px 0;
+    margin-top: 10px;
     cursor: pointer;
     padding: 8px;
     background-color: #f8f8f8;
+    justify-content: space-between;
     color: black;
     border-radius: 8px;
     transition: background-color 0.3s;
     justify-content: flex-start;
   }
+
 
   .menu__item img {
     margin-right: 10px;
@@ -85,12 +93,12 @@
   }
 
   .arrow {
-    margin-left: auto; 
+    margin-left: 10px; 
     font-size: 14px; 
-    color: black 
+    color: black;
+    transform: translateY(-2px);
   }
   
   .menu__item:hover {
     background-color: #e0e0e0; /* Đổi màu nền khi hover */
   }
-  
