Continue design the privacy pages

--- a/chat-app/src/pages/Privacy/Privacy.css
+++ b/chat-app/src/pages/Privacy/Privacy.css
@@ -1,14 +1,14 @@
 .privacy {
 
-    margin-top: 100px;
+    margin-top: 80px;
     display: flex;
     flex-direction: column;
-    gap: 160px;
+    gap: 140px;
 }
 
 .privacy-slogan {
     padding-left: 170px;
-    padding-right: 150px;
+    padding-right: 170px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -17,20 +17,19 @@
 }
 
 .privacy-slogan p {
-    flex: 1;
     background-clip: text;
     background: linear-gradient(83.84deg, #007BFF -8.87%, #33c2ff 6.54%, #50fffc 58.58%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    font-size: 70px;
-    font-weight: 500;
-    width: 421;
+    font-size: 65px;
+    font-weight: 600;
+
 }
 
 .privacy-slogan img {
-    width: 595px;
+    width: 550px;
     height: fit-content;
-    border: 4px solid #007BFF;
+    border: 4px solid #33c2ff;
     border-radius: 25px;
 
 }
@@ -39,20 +38,40 @@
 
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 40px;
     text-align: center;
+    justify-content: center;
+    align-items: center;
 }
 
 .privacy-connect-title {
-    font-size: 60px;
+    font-size: 50px;
     font-weight: 500;
-    color: rgb(46, 46, 46);
+    color: rgb(31, 31, 31);
 }
 
 .privacy-connect-content {
+    width: 950px;
     font-size: 19px;
     color: #818181;
 }
+
+.privacy-connect-img {
+    width: 350px;
+    height: fit-content;
+}
+
+.privacy hr {
+    width: 800px;
+    height: 3px;
+    background: #33c2ff;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-self: center;
+}
+
+
 
 .privacy-personal {
     display: flex;
@@ -60,25 +79,109 @@
     padding-right: 170px;
     gap: 80px;
     align-items: center;
+
+
 }
 
 .privacy-personal img {
-    width: 780px;
+    width: 750px;
     height: fit-content;
     border-top-right-radius: 30px;
     border-bottom-right-radius: 30px;
-    border: #007BFF solid 4px;
+    border: #33c2ff solid 4px;
     border-left: 0;
 
+}
+
+.privacy-personal-content {
+    display: flex;
+    flex-direction: column;
+    gap: 40px
 }
 
 .personal-title {
     font-size: 65px;
     font-weight: 500;
-    margin-bottom: 15px;
+
 }
 
 .personal-content {
+    font-size: 18px;
+    color: #676767;
+    width: 480px;
+}
+
+.personal-more {
+
+    width: 130px;
+    height: 50px;
+    background: #007BFF;
+    font-size: 16px;
+    color: white;
+    border-radius: 25px;
+    border: 0;
+    font-weight: 500;
+}
+
+.design-safety {
+    display: flex;
+    flex-direction: column;
+    gap: 35px;
+    justify-content: center;
+    align-items: center;
+    padding-left: 250px;
+    padding-right: 250px;
+}
+
+.design-safety-title {
+    color: #747474;
+    font-size: 15px;
+    font-weight: 500;
+}
+
+.design-safety-desc {
+    font-size: 30px;
+    text-align: center;
+}
+
+.design-safety-content {
+    display: flex;
+    flex-direction: column;
+    gap: 95px;
+    align-items: center;
+}
+
+.design-safety-content .content-title {
+    color: #747474;
+}
+
+.content-cards {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 1080px;
+
+}
+
+.content-cards div {
+    width: 316px;
+    height: 426px;
+    background: rgb(255, 255, 255);
+    text-align: center;
+    padding: 60px 29px;
+    display: flex;
+    flex-direction: column;
+    gap: 80px;
+    border-radius: 20px;
+    border: 3px solid #007BFF
+}
+
+.content-cards .card-title {
+    font-weight: 600;
+    font-size: 27px;
+
+}
+
+.content-cards .card-content {
     font-size: 17px;
-    color: #818181;
 }
