--- a/chat-app/src/pages/Privacy/Privacy.css
+++ b/chat-app/src/pages/Privacy/Privacy.css
@@ -155,7 +155,7 @@
     color: #747474;
 }
 
-.content-cards {
+.design-safety .content-cards {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -163,25 +163,77 @@
 
 }
 
-.content-cards div {
+.design-safety .content-cards div {
     width: 316px;
     height: 426px;
-    background: rgb(255, 255, 255);
+    background: #f9f9f9;
     text-align: center;
     padding: 60px 29px;
     display: flex;
     flex-direction: column;
     gap: 80px;
     border-radius: 20px;
-    border: 3px solid #007BFF
+    border: 3px solid #33c2ff
 }
 
-.content-cards .card-title {
+.design-safety .content-cards .card-title {
     font-weight: 600;
     font-size: 27px;
 
 }
 
-.content-cards .card-content {
+.design-safety .content-cards .card-content {
     font-size: 17px;
+}
+
+.keep-safe {
+    display: flex;
+    flex-direction: column;
+    gap: 35px;
+    justify-content: center;
+    align-items: center;
+    padding-left: 30px;
+    padding-right: 30px;
+
+    .keep-safe-title {
+        color: #747474;
+        font-size: 15px;
+        font-weight: 500;
+    }
+
+    .keep-safe-desc {
+        font-size: 30px;
+        text-align: center;
+    }
+
+    .keep-safe-content {
+        display: flex;
+        flex-direction: column;
+        gap: 95px;
+        align-items: center;
+
+
+        .content-title {
+            color: #747474;
+            text-align: center;
+        }
+
+        .content-cards {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 30px;
+
+            div {
+                padding: 20px 60px;
+                width: 705px;
+                height: 287px;
+                background: #f8f8f8;
+                display: flex;
+                flex-direction: column;
+                gap: 20px;
+                border-radius: 25px;
+            }
+        }
+    }
+
 }
