--- a/chat-app/src/components/ChatList/ChatList.css
+++ b/chat-app/src/components/ChatList/ChatList.css
@@ -1,13 +1,14 @@
 .chat-list {
   /* width: 361px; */
   height: 100vh; 
-  background-color: #f5f5f5;
+  background-color: white;
   border-radius: 20px; 
   padding: 10px;
   overflow-y: auto; 
   display: flex;
   flex-direction: column;
   gap: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .chat-list-header {
