--- a/chat-app/src/components/Chat_nghia/chat_nghia.css
+++ b/chat-app/src/components/Chat_nghia/chat_nghia.css
@@ -10,10 +10,6 @@
 
 
     .top{
-        justify-content: space-between;
-        align-items: center;
-        display: flex;
-        flex-direction: row;
         position: sticky;
         top: 0; 
         background-color: white; 
@@ -57,6 +53,7 @@
     }
 
     .center{
+        background-color: white;
         padding: 20px;
         flex: 1;
         overflow: scroll;
@@ -68,6 +65,20 @@
             max-width: 70%;
             display: flex;
             gap: 20px;
+
+            &.own{
+                align-self: flex-end;
+
+                .messageText{
+                    p{  
+                        
+                        background-color: #0077FF;
+                        padding: 8px;
+                        border-radius: 10px;
+                        color:white
+                    }
+                }
+            }
 
             img{
                 width: 30px;
