--- a/chat-app/src/components/left/SideNav.css
+++ b/chat-app/src/components/left/SideNav.css
@@ -6,7 +6,7 @@
   
   .side-nav {
     width: 50px; /* Độ rộng của thanh điều hướng */
-    background-color: #f5f5f5;
+    background-color: white;
     padding: 10px 0;
     display: flex;
     flex-direction: column;
