--- a/chat-app/src/components/left_layout/Layout.css
+++ b/chat-app/src/components/left_layout/Layout.css
@@ -10,17 +10,20 @@
     margin-bottom: 10px;
     width: 50px;  
     height: 100%;
-    background-color: #f5f5f5;
+    background-color: white;
     
     margin-left: 10px;
   }
   
-  .chat-list {
+  .chat-listt {
+    width: 400px;
     margin-top: 10px;
     margin-bottom: 10px;
     margin-left: 10px;
+    border-radius: 20px;
+    
     /* width: 361px;   */
-    background-color: #fff;
-    padding: 10px;
+    background-color: white;
+    
   }
   
