--- a/chat-app/src/pages/Chat/chat.css
+++ b/chat-app/src/pages/Chat/chat.css
@@ -8,6 +8,8 @@
 
 /* Side navigation */
 .left {
+    
+    
     width: 19%;  /* Sidebar takes 15% of the width */
     background-color: #f5f5f5;
     height: 100vh; /* Full viewport height */
@@ -16,11 +18,11 @@
 
 /* Chat section */
 .mid {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     margin-top: 10px;
-
+    margin-left: 29px;
     border-radius: 25px;
-    
-    width: 88%;  /* Chat section takes 85% of the width */
+    width: 89%;  /* Chat section takes 85% of the width */
     flex: 1;  /* Chat takes the remaining space between side nav and info section */
     display: flex;
     flex-direction: column;
