--- a/chat-app/src/components/left/SideNav.css
+++ b/chat-app/src/components/left/SideNav.css
@@ -1,46 +1,46 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  .side-nav {
-    width: 50px; /* Độ rộng của thanh điều hướng */
-    background-color: white;
-    padding: 10px 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-    height: 100vh; /* Chiều cao của thanh điều hướng bằng toàn màn hình */
-    border-radius: 20px; /* Bo tròn các góc của thanh điều hướng */
-    margin-left: 10px; /* Khoảng cách bên trái để giúp bo tròn rõ ràng hơn */
-  }
-  
-  .side-nav ul {
-    list-style-type: none;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center; /* Căn giữa theo chiều ngang */
-    margin-top: 20px; /* Khoảng cách từ phía trên cùng của thanh điều hướng */
-  }
-  
-  .side-nav li {
-    margin-bottom: 20px;
-  }
-  
-  .nav-icon,
-  .profile-icon {
-    width: 35px; /* Kích thước của các biểu tượng */
-    height: 35px;
-    border-radius: 50%;
-  }
-  
-  .divider {
-    width: 50%;
-    height: 1px;
-    background-color: #ddd;
-    margin: 20px 0;
-  }
-  
+.side-nav-bar {
+  width: 50px;
+  /* Độ rộng của thanh điều hướng */
+  background-color: rgb(255, 255, 255);
+  padding: 10px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+  height: 806px;
+  /* Chiều cao của thanh điều hướng bằng toàn màn hình */
+  border-radius: 20px;
+  /* Bo tròn các góc của thanh điều hướng */
+  margin-left: 10px;
+  /* Khoảng cách bên trái để giúp bo tròn rõ ràng hơn */
+}
+
+.side-nav-bar ul {
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* Căn giữa theo chiều ngang */
+  margin-top: 20px;
+  /* Khoảng cách từ phía trên cùng của thanh điều hướng */
+}
+
+.side-nav-bar li {
+  margin-bottom: 20px;
+}
+
+
+.profile-icon {
+  width: 35px;
+  /* Kích thước của các biểu tượng */
+  height: 35px;
+  border-radius: 50%;
+}
+
+.divider {
+  width: 50%;
+  height: 1px;
+  background-color: #ddd;
+  margin: 20px 0;
+}
