--- a/chat-app/src/components/left_layout/Layout.css
+++ b/chat-app/src/components/left_layout/Layout.css
@@ -1,29 +1,31 @@
 .main-layout {
-    background-color: #f5f5f5;
-    display: flex;  
-    width: 100%;
-    height: 100vh;  
-  }
-  
-  .side-nav {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    width: 50px;  
-    height: 100%;
-    background-color: white;
-    
-    margin-left: 10px;
-  }
-  
-  .chat-listt {
-    width: 400px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: 10px;
-    border-radius: 20px;
-    
-    /* width: 361px;   */
-    background-color: white;
-    
-  }
-  
+
+  display: flex;
+  flex-direction: row;
+  gap: 5px;
+  width: 426px;
+
+
+}
+
+.side-nav {
+  /* margin-top: 10px;
+  margin-bottom: 10px; */
+  width: 50px;
+  height: 100%;
+  background-color: white;
+
+  margin-left: 10px;
+}
+
+.chat-listt {
+  width: 400px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  border-radius: 20px;
+
+  /* width: 361px;   */
+  background-color: white;
+
+}
