--- a/chat-app/src/pages/Chat/chat.css
+++ b/chat-app/src/pages/Chat/chat.css
@@ -1,48 +1,14 @@
-/* Main layout - parent container */
-.main-layout {
+.main-layout-chat {
     display: flex;
-    width: 100%;
-    height: 100vh;  /* Full viewport height */
-    overflow: hidden; /* Avoid content overflow */
-}
+    flex-direction: row;
+    gap: 15px;
+    align-items: center;
 
-/* Side navigation */
-.left {
-    
-    
-    width: 19%;  /* Sidebar takes 15% of the width */
-    background-color: #f5f5f5;
-    height: 100vh; /* Full viewport height */
-    box-sizing: border-box;  /* Ensure padding/border don’t affect width */
-}
+    .chat-section {
+        display: flex;
+        flex-direction: row;
+        gap: 15px;
+        align-items: center;
+    }
 
-/* Chat section */
-.mid {
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    margin-top: 10px;
-    margin-left: 29px;
-    border-radius: 25px;
-    width: 89%;  /* Chat section takes 85% of the width */
-    flex: 1;  /* Chat takes the remaining space between side nav and info section */
-    display: flex;
-    flex-direction: column;
-    border-left: 1px solid #dddddd35;
-    border-right: 1px solid #dddddd35;
-    height: 100vh;  /* Full height */
-    overflow-y: auto;  /* Scroll messages if content overflows */
-    box-sizing: border-box;
-}
-
-/* Info section */
-.right {
-    border-radius: 25px;
-    margin-top: 10px;
-    width: 20%;  /* Info section takes 20% of the width */
-    height: 100vh;  /* Full viewport height */
-    
-    display: flex;
-    flex-direction: column;
-    
-    overflow-y: auto;  /* Enable vertical scrolling if content overflows */
-    
 }
