--- a/chat-app/src/components/Group_chat/chat_group.css
+++ b/chat-app/src/components/Group_chat/chat_group.css
@@ -4,21 +4,25 @@
     flex-direction: column;
     border-left: 1px solid white;
     border-right: 1px solid rgb(255, 255, 255);
-    width: 697px;
+    width: 699px;
     height: 806px;
+    border-radius: 25px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 
     /* margin-top: 1rem; */
     /* padding: 20px; */
 
 
     .top {
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
         display: flex;
         justify-content: space-between;
         align-items: center;
         flex-direction: row;
         position: sticky;
         top: 0;
-        background-color: white;
+        background-color: rgb(255, 255, 255);
         border-bottom: 1px solid rgb(165, 161, 161);
         padding: 20px;
 
@@ -125,13 +129,15 @@
     }
 
     .bottom {
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
         height: 46px;
         display: flex;
         flex-direction: row;
         align-items: center;
         justify-content: center;
         gap: 10px;
-        background-color: rgb(246, 246, 246);
+        background-color: white;
 
         img {
             height: 20px;
