--- a/chat-app/src/components/profile_setting/ProfileSettings.css
+++ b/chat-app/src/components/profile_setting/ProfileSettings.css
@@ -8,6 +8,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 1000;
 }
 
 .profile-settings {
@@ -51,7 +52,8 @@
   height: 20px;
   margin-right: 10px;
 }
-.section-ava{
+
+.section-ava {
   width: 30px;
   height: 30px;
   border-radius: 50%;
@@ -74,12 +76,14 @@
 .section ul li {
   display: flex;
   align-items: center;
-  justify-content: space-between; /* Giữ radio button bên phải */
+  justify-content: space-between;
+  /* Giữ radio button bên phải */
   margin-bottom: 10px;
 }
 
 .centered-text {
-  text-align: center; /* Căn giữa chữ */
+  text-align: center;
+  /* Căn giữa chữ */
 }
 
 input[type="radio"],
