--- a/chat-app/src/pages/Chat/chat.css
+++ b/chat-app/src/pages/Chat/chat.css
@@ -1,14 +1,17 @@
 .main-layout-chat {
     display: flex;
     flex-direction: row;
-    gap: 15px;
-    align-items: center;
+    gap: 10px;
+    padding-top: 17px;
+    background: #f4f4f4;
+
+
 
     .chat-section {
         display: flex;
         flex-direction: row;
-        gap: 15px;
-        align-items: center;      
+        gap: 10px;
+        align-items: center;
     }
 
 }
