--- a/chat-app/src/components/ChatList/ChatList.css
+++ b/chat-app/src/components/ChatList/ChatList.css
@@ -59,11 +59,11 @@
   font-weight: bold;
 }
 
-.tabs button.active {
+/* .tabs button.active {
   background-color: #007bff;
   color: white;
   border-radius: 20px;
-}
+} */
 
 .chat-item {
   display: flex;
