Setting route for each chatitem, link chatboxes with chatitems, fix info personals ,  design chatsection for individual chats

--- a/chat-app/src/pages/Chat/chat.css
+++ b/chat-app/src/pages/Chat/chat.css
@@ -7,11 +7,11 @@
 
 
 
-    .chat-section {
+    /* .chat-section {
         display: flex;
         flex-direction: row;
         gap: 10px;
         align-items: center;
-    }
+    } */
 
 }
