--- a/chat-app/src/components/merge_chat_info/Chat1/Chat1.css
+++ b/chat-app/src/components/merge_chat_info/Chat1/Chat1.css
@@ -1,6 +1,6 @@
-/* .Chatbox2-section {
+.chatbox-section {
     display: flex;
     flex-direction: row;
     gap: 10px;
     align-items: center;
-} */
+}
