--- a/chat-app/src/components/Group_chat/chat_group.css
+++ b/chat-app/src/components/Group_chat/chat_group.css
@@ -38,6 +38,16 @@
                 border-radius: 50%;
             }
 
+            .user-status {
+                background: rgb(40, 232, 56);
+                width: 17px;
+                height: 17px;
+                border: solid 3px white;
+                border-radius: 50%;
+                margin-top: 25px;
+                margin-left: -33px;
+            }
+
             .userDetails {
 
                 span {
