--- a/chat-app/src/pages/Chat/chat.css
+++ b/chat-app/src/pages/Chat/chat.css
@@ -16,10 +16,10 @@
     }
 
     .infor-status {
+        position: sticky;
         background: rgb(40, 232, 56);
         width: 20px;
         height: 20px;
-        position: absolute;
         border: solid 3px white;
         border-radius: 50%;
         margin-top: -20px;
