--- a/chat-app/src/components/login/Features_item1/features_item1.css
+++ b/chat-app/src/components/login/Features_item1/features_item1.css
@@ -1,29 +1,35 @@
 .feature_item1 {
     display: flex;
     flex-direction: row;
-    gap: 250px;
+    gap: 280px;
     align-items: center;
 
-}
+    .feature-desc {
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
 
-.feature_item1 .feature-desc {
-    display: flex;
-    flex-direction: column;
-    gap: 15px
-}
+        .feature-title {
+            font-weight: 700;
+            font-size: 70px;
 
-.feature_item1 .feature-title{
-    font-weight: 700;
-    font-size: 70px;
-   
-}
+        }
 
-.feature_item1 .feature-content {
+        .feature-content {
 
-    color: #302f2f;
-    font-weight: 400;
-}
+            color: #302f2f;
+            font-weight: 400;
+        }
+    }
 
-.feature_item1 .feature-img {
-    margin-right: 140px;
+    .feature-img {
+        margin-right: 140px;
+
+        img {
+            width: 550px;
+        }
+
+    }
+
+
 }
