--- a/chat-app/src/components/login/Features_item2/features_item2.css
+++ b/chat-app/src/components/login/Features_item2/features_item2.css
@@ -1,25 +1,35 @@
 .feature_item2 {
     display: flex;
     flex-direction: row;
-    gap: 250px;
+    gap: 100px;
     align-items: center;
 
-}
+    .feature-desc {
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
 
-.feature_item2 .feature-desc {
-    display: flex;
-    flex-direction: column;
-    gap: 15px
-}
+        .feature-title {
+            font-weight: 700;
+            font-size: 70px;
 
-.feature_item2 .feature-title {
-    font-weight: 700;
-    font-size: 70px;
+        }
 
-}
+        .feature-content {
 
-.feature_item2 .feature-content {
+            color: #302f2f;
+            font-weight: 400;
+        }
+    }
 
-    color: #302f2f;
-    font-weight: 400;
+    .feature-img {
+        margin-right: 140px;
+
+        img {
+            width: 500px;
+        }
+
+    }
+
+
 }
