Complete the privacy page

--- a/chat-app/src/pages/Features/features.css
+++ b/chat-app/src/pages/Features/features.css
@@ -4,5 +4,6 @@
     padding-left: 170px;
     padding-top: 100px;
     gap: 300px;
-    padding-right: 100px
+    padding-right: 100px;
+    padding-bottom: 20px
 }
