--- a/chat-app/src/pages/Privacy/Privacy.css
+++ b/chat-app/src/pages/Privacy/Privacy.css
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     gap: 140px;
+    margin-bottom: 20px;
 }
 
 .privacy-slogan {
@@ -184,6 +185,7 @@
 
 .design-safety .content-cards .card-content {
     font-size: 17px;
+    line-height: 1.3;
 }
 
 .keep-safe {
@@ -232,6 +234,34 @@
                 flex-direction: column;
                 gap: 20px;
                 border-radius: 25px;
+
+                .card-title {
+                    padding: 0;
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    gap: 8px;
+                    height: fit-content;
+                    width: fit-content;
+
+                    img {
+                        width: 24px;
+                        height: 23px;
+                    }
+
+                    p {
+                        font-size: 25px;
+                        font-weight: 600;
+                    }
+
+                }
+
+                .card-content {
+                    padding-left: 32px;
+                    font-size: 17px;
+                    line-height: 1.8;
+                    color: #747474;
+                }
             }
         }
     }
